--- a/FoodTracker - Define Your Data Model/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker - Define Your Data Model/FoodTracker/Base.lproj/Main.storyboard
@@ -76,10 +76,10 @@
             </objects>
             <point key="canvasLocation" x="440" y="387"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Meal Table View Controller-->
         <scene sceneID="5zV-ZO-NxF">
             <objects>
-                <tableViewController id="teq-h9-lE6" sceneMemberID="viewController">
+                <tableViewController id="teq-h9-lE6" customClass="MealTableViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Kj-wy-WSQ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
